[package]

name = "yaxpeax-rx"
version = "0.0.1"
authors = [ "iximeow <me@iximeow.net>" ]
license = "0BSD"
repository = "http://git.iximeow.net/yaxpeax-rx/"
description = "Renesas RX decoders for the yaxpeax project"
readme = "README.md"
edition = "2021"

[dependencies]
yaxpeax-arch = { version = "0.2.7", default-features = false, features = [] }
"num-traits" = { version = "0.2", default-features = false }
